c/src/test/resources/c/nec_inline_bnc/valid/inf8b.ctrl
<controlFile>
  <sourceFile name="../inf8.c" id="1" />
  <run>
    <startPosition fileId="1" line="2" />
    <wayPoint fileId="1" line="6" />
    <wayPoint fileId="1" line="18" />
    <wayPoint fileId="1" line="30" />
    <endPosition fileId="1" line="36" />
  </run>
</controlFile>