c/src/test/resources/c/nec_inline_bnc/invalid/ex47-2.ctrl
<controlFile>
  <sourceFile name="../ex47.c" id="1" />
  <run>
    <startPosition fileId="1" line="6" />
    <wayPoint fileId="1" line="20" >
      <loop iterTimes="2" />
    </wayPoint>
    <endPosition fileId="1" line="30" />
  </run>
</controlFile>